# Gridwolf

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  DOCKER_HUB.md  Dockerfile.backend  Dockerfile.frontend  FEATURES.md  IMAGES.md  INDEX.md  INSTALLATION.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES_v0.9.2.md  SCREENSHOTS.md  SECURITY.md  docker-compose.hub.yml  docker-compose.prod.yml  docker-compose.yml  gridwolf.bat  log.txt  nginx.conf  package-lock.json  package.json  vercel.json
.claude/: launch.json  settings.local.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  dashboard.py  objects.py  ontology.py  router.py  scanners.py
backend/app/api/v1/ics/: __init__.py  devices.py  findings.py  pcap.py  sessions.py  vuln_feed.py
backend/app/core/: config.py  database.py  security.py
backend/app/engine/: __init__.py  c2_detector.py  cve_lookup.py  pcap_processor.py  protocol_parsers.py  report_generator.py  vuln_feed.py
backend/app/models/: __init__.py  admin.py  ics.py  ontology.py  user.py
backend/app/schemas/: common.py  ontology.py  user.py
backend/app/services/: auth.py  ontology.py  scanner_parsers.py
deploy/: MARKETPLACE.md
docs/: LINKEDIN_POST.md
frontend/: eslint.config.js  index.html  package.json  vite.config.ts
landing/: index.html
packer/: gridwolf.pkr.hcl
plans/: build-gridwolfOS-ova.md  ship-gridwolfOS-v1.1.0.md
scripts/: install.ps1  install.sh  take-screenshots.mjs
(+150 files in other folders)
